--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -126,6 +126,9 @@ footer {
     color: #fff;
     padding: 20px;
     text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .company-info p {
