--- a/site/styles.css
+++ b/site/styles.css
@@ -18,8 +18,12 @@ header {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.logo {
+    margin-bottom: 50px;
+}
+
 .logo img {
-    max-width: 150px;
+    max-width: 300px;
 }
 
 .description p {
@@ -119,16 +123,13 @@ header {
     background-color: #ddd;
 }
 
-
 /* Стили для футера */
 footer {
     background-color: #333;
     color: #fff;
     padding: 20px;
     text-align: center;
-    position: fixed;
     bottom: 0;
-    width: 100%;
 }
 
 .company-info p {
