--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,12 +18,8 @@ header {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.logo {
-    margin-bottom: 50px;
-}
-
 .logo img {
-    max-width: 300px;
+    max-width: 150px;
 }
 
 .description p {
@@ -130,7 +126,7 @@ footer {
     color: #fff;
     padding: 20px;
     text-align: center;
-    bottom: 0;
+    width: 100%;
 }
 
 .company-info p {
