--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -979,6 +979,77 @@ footer {
     margin-top: 20px;
 }
 
+/* Стили для блока с профилем студента */
+.student-profile {
+    background-color: #fff;
+    padding: 20px;
+    margin: 20px auto;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+}
+
+/* Стили для заголовка профиля студента */
+.student-profile h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-align: center;
+    color: #007bff;
+}
+
+/* Стили для контейнера с информацией о студенте */
+.student-info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+/* Стили для изображения профиля студента */
+.profile-picture {
+    flex: 0 0 200px;
+    text-align: center;
+}
+
+.profile-picture img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+/* Стили для блока с деталями профиля студента */
+.profile-details {
+    flex: 1;
+    padding: 10px;
+}
+
+/* Стили для формы загрузки фотографии профиля */
+.profile-picture form {
+    margin-top: 10px;
+    text-align: center;
+}
+
+.profile-picture input[type="file"] {
+    display: none;
+}
+
+.profile-picture input[type="submit"] {
+    padding: 8px 16px;
+    font-size: 16px;
+    border: none;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.profile-picture input[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+
 
 
 
