--- a/templates/shared/index.html.twig
+++ b/templates/shared/index.html.twig
@@ -2,9 +2,9 @@
 {% block body %}
     <div class="landing-description">
         <div class="landing-buttons">
-            <button onclick="location.href='login_registration.html'">Студентам</button>
-            <button onclick="location.href='login_registration.html'">ВУЗам</button>
-            <button onclick="location.href='login_registration.html'">Предпринимателям</button>
+            <button onclick="location.href='/registration'">Студентам</button>
+            <button onclick="location.href='/registration'">ВУЗам</button>
+            <button onclick="location.href='/registration'">Предпринимателям</button>
         </div>
 
         <div class="app-description">
