--- a/templates/shared/rating.html.twig
+++ b/templates/shared/rating.html.twig
@@ -1,72 +1,80 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-<div class="filters">
-    <h2>Фильтры</h2>
-    <div class="filter-option">
-        <label for="city-filter">По городам:</label>
-        <select id="city-filter">
-            <option value="" selected>Не выбрано</option>
-            {% for city in cities %}
-                <option value="{{ city.city }}">{{ city.city }}</option>
-            {% endfor %}
-            <!-- Опции для выбора городов -->
-        </select>
+    <div class="filters">
+        <h2>Фильтры</h2>
+        <div class="filter-option">
+            <label for="city-filter">По городам:</label>
+            <select id="city-filter">
+                <option value="" selected>Не выбрано</option>
+                {% for city in cities %}
+                    <option value="{{ city.city }}">{{ city.city }}</option>
+                {% endfor %}
+                <!-- Опции для выбора городов -->
+            </select>
+        </div>
+        <div class="filter-option">
+            <label for="university-filter">По вузам:</label>
+            <select id="university-filter">
+                <!-- Опции для выбора вузов -->
+                <option value="" selected>Не выбрано</option>
+                {% for university in universities %}
+                    <option value="{{ university.name }}" {% if university.id == university_id %} selected {% endif %}>{{ university.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="filter-option">
+            <label for="faculty-filter">По факультетам:</label>
+            <select id="faculty-filter">
+                <!-- Опции для выбора факультетов -->
+                <option value="" disabled selected>Не выбрано</option>
+                {% for faculty in faculties %}
+                    <option value="{{ faculty.name }}">{{ faculty.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="filter-option">
+            <label for="stream-filter">По потокам:</label>
+            <select id="stream-filter">
+                <option value="" disabled selected>Не выбрано</option>
+                {% for year in streamYears %}
+                    <option value="{{ year.streamYear }}">{{ year.streamYear }}</option>
+                {% endfor %}
+                <!-- Опции для выбора потоков -->
+            </select>
+        </div>
+        <div class="filter-option">
+            <label for="department-filter">По кафедрам:</label>
+            <select id="department-filter">
+                <option value="" disabled selected>Не выбрано</option>
+                <!-- Опции для выбора кафедр -->
+                {% for kafedra in kafedras %}
+                    <option value="{{ kafedra.id }}">{{ kafedra.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="filter-option">
+            <label for="period-filter">По периоду:</label>
+            <input type="text" id="period-filter" placeholder="YYYY">
+        </div>
+        <button id="apply-filters">Применить фильтры</button>
     </div>
-    <div class="filter-option">
-        <label for="university-filter">По вузам:</label>
-        <select id="university-filter">
-            <!-- Опции для выбора вузов -->
-            <option value="" selected>Не выбрано</option>
-            {% for university in universities %}
-                <option value="{{ university.name }}" {% if university.id == university_id %} selected {% endif %}>{{ university.name }}</option>
-            {% endfor %}
-        </select>
-    </div>
-    <div class="filter-option">
-        <label for="faculty-filter">По факультетам:</label>
-        <select id="faculty-filter">
-            <!-- Опции для выбора факультетов -->
-            <option value="" disabled selected>Не выбрано</option>
-            {% for faculty in faculties %}
-                <option value="{{ faculty.name }}">{{ faculty.name }}</option>
-            {% endfor %}
-        </select>
-    </div>
-    <div class="filter-option">
-        <label for="stream-filter">По потокам:</label>
-        <select id="stream-filter">
-            <option value="" disabled selected>Не выбрано</option>
-            {% for year in streamYears %}
-                <option value="{{ year.streamYear }}">{{ year.streamYear }}</option>
-            {% endfor %}
-            <!-- Опции для выбора потоков -->
-        </select>
-    </div>
-    <div class="filter-option">
-        <label for="department-filter">По кафедрам:</label>
-        <select id="department-filter">
-            <option value="" disabled selected>Не выбрано</option>
-            <!-- Опции для выбора кафедр -->
-            {% for kafedra in kafedras %}
-                <option value="{{ kafedra.id }}">{{ kafedra.name }}</option>
-            {% endfor %}
-        </select>
-    </div>
-    <div class="filter-option">
-        <label for="period-filter">По периоду:</label>
-        <input type="text" id="period-filter" placeholder="YYYY">
-    </div>
-    <button id="apply-filters">Применить фильтры</button>
-</div>
 
-<div class="ranking">
-    <h2>Рейтинг студентов</h2>
-    <div id="student-list">
-
+    <div class="ranking" >
+        <h2>Рейтинг студентов</h2>
+        <div id="student-list">
+        </div>
     </div>
-</div>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<script src="{{ asset('js/filter.js') }}"></script>
+    <div class="ranking2">
+        <h2>Диаграмма рейтинга студентов</h2>
+        <div id="student-list2">
+            <canvas id="chart"></canvas>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="{{ asset('js/filter.js') }}"></script>
 {% endblock %}
