--- a/templates/shared/index.html.twig
+++ b/templates/shared/index.html.twig
@@ -35,7 +35,7 @@
             {% if 'ROLE_STUDENT' in  app.user.roles %}
                 <button onclick="location.href='/student/view/{{ app.user.id }}'">Профиль</button>
             {% else %}
-                <button onclick="location.href='/university_profile'">Профиль</button>
+                <button onclick="location.href='/university/view/1'">Профиль</button>
             {% endif %}
         {% else %}
             <button onclick="location.href='/login'">Войти</button>
