--- a/templates/university/profile.html.twig
+++ b/templates/university/profile.html.twig
@@ -53,7 +53,7 @@
     </div>
 
     <div class="university-students">
-        <button><a href="/rating?university_id={{ university.id }}">Студенты ВУЗа</a></button>
+        <button><a href="/student/super_filter?university={{ university.name }}">Студенты ВУЗа</a></button>
     </div>
     <script>
 
